# src/main/kotlin/mimsoft/io/waiter/info/WaiterInfoRoute.kt
@@ -3,11 +3,13 @@ package mimsoft.io.waiter.info
 import io.ktor.http.*
 import io.ktor.server.application.*
 import io.ktor.server.auth.*
+import io.ktor.server.request.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
 import mimsoft.io.client.device.DeviceController
 import mimsoft.io.courier.orders.CourierOrderService
 import mimsoft.io.features.courier.CourierService
+import mimsoft.io.features.staff.StaffDto
 import mimsoft.io.features.staff.StaffPrincipal
 import mimsoft.io.utils.principal.BasePrincipal
 import mimsoft.io.waiter.WaiterService
@@ -34,5 +36,11 @@ fun Route.routeToWaitersInfo() {
         } else {
             call.respond(dto)
         }
+    }
+
+    patch("update") {
+        val principal = call.principal<BasePrincipal>()
+        val dto = call.receive<StaffDto>()
+        call.respond(waiterService.updateCourierInfo(dto.copy(id = principal?.staffId)))
     }
 }
